# gh-toolkit

./: CLAUDE.md  README.md  example_roster.csv  example_rubric.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md  repo-describe.md  repo-tag.md
src/gh_toolkit/: __init__.py  cli.py
src/gh_toolkit/commands/: invite.py  org.py  page.py  portfolio.py  repo.py  site.py  tag.py  transfer.py
src/gh_toolkit/core/: config.py  description_generator.py  feedback.py  github_client.py  health_checker.py  license_manager.py  llm.py  portfolio_generator.py  readme_generator.py  repo_cloner.py  repo_extractor.py  repo_readme_generator.py  roster.py  rubric.py  site_generator.py  topic_tagger.py
src/gh_toolkit/tui/screens/: help.py  home.py  org.py  preview.py  repo.py  results.py
src/gh_toolkit/tui/widgets/: action_executor.py  action_modal.py
tests/: conftest.py
tests/integration/: test_cli_integration.py  test_org_portfolio_commands.py  test_roster_command.py  test_transfer_commands.py
tests/unit/: test_config.py  test_description_generator.py  test_feedback.py  test_health_checker.py  test_license_manager.py  test_portfolio_fix.py  test_portfolio_generator.py  test_readme_generator.py  test_repo_cloner.py  test_repo_extractor.py  test_repo_readme_generator.py  test_roster.py  test_rubric.py  test_site_generator.py  test_topic_tagger.py
